test(TAP-12083): add unit test case